@startuml

title __DASHBOARD's Class Diagram__\n

  namespace com.gmail.ib.projectCrypt {
    namespace ui {
      namespace dashboard {
        class Dashboard {
            + Dashboard()
        }
      }
    }
  }
  

  namespace com.gmail.ib.projectCrypt {
    namespace ui {
      namespace dashboard {
        class card {
            + card()
        }
      }
    }
  }
  

  namespace com.gmail.ib.projectCrypt {
    namespace ui {
      namespace dashboard {
        class chart {
            + chart()
        }
      }
    }
  }
  

  namespace com.gmail.ib.projectCrypt {
    namespace ui {
      namespace dashboard {
        class content {
            + content()
        }
      }
    }
  }
  

  namespace com.gmail.ib.projectCrypt {
    namespace ui {
      namespace dashboard {
        class dashboardContent {
            + dashboardContent()
        }
      }
    }
  }
  

  namespace com.gmail.ib.projectCrypt {
    namespace ui {
      namespace dashboard {
        class trendingCurrencies {
            + trendingCurrencies()
        }
      }
    }
  }
  

  Dashboard -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  card -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  chart -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  content -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  dashboardContent -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  trendingCurrencies .up.|> com.vaadin.flow.component.HasSize
  trendingCurrencies -up-|> com.vaadin.flow.component.orderedlayout.HorizontalLayout


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
